--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "license": "ISC",
   "dependencies": {
     "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "react-dom": "^15.4.0",
+    "react-slider-menu": "^0.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -41,6 +42,7 @@
     "postcss-loader": "^2.0.6",
     "react-slick": "^0.14.11",
     "react-slider": "^0.8.0",
+    "react-slider-menu": "^0.2.3",
     "sass-loader": "^6.0.6",
     "slick-carousel": "^1.6.0",
     "source-map-loader": "^0.2.1",
